tests/NormalTests/paczka1/fuzzy1/31152968.err
Error in line 4: xLWaxHMJ A449 13,1
Error in line 21: KezX9TS A449 76,2
Error in line 31: A1fFsHS S379 67,8
